# bdk_wallet

./: Cargo.toml
examples/example_wallet_hwi_signer/: Cargo.toml  README.md
examples/example_wallet_hwi_signer/src/: main.rs
